  Class definition of graphMCP has changed and is no
  longer a subclass of graphNEL. Code is provided to
  update old serialized (saved) objects.  

- The GUI will (optionally) look for a newer version of 
  gMCP on CRAN.

- Power simulation code from our third author
  Bjoern Bornkamp.

- lattice graphs for power simulations

- New example graphs:

  - general and simple successive graphs
  - fallback procedure
  - truncated holm (special case)
  - 

- Renaming to give existing example graphs simpler names.

- CI dialog is modal.

- LaTeX-Code can be shown in Dialog and does not have 
  to be saved in a file.

  
Version 0.6-6 (04-Jul-2011, Rev. 860)
=====================================

- Fixed a bug in the GUI that deleted often p-values.

- Adjusted p-values are calculated also in the parametric case.

- Graphs without epsilon edges can be processed by a
  much faster procedure written in C.
  
- matrix2graph & graph2matrix deal better with variable edges.

- Hopefully setDividerLocation works now always correct, i.e. 
  the graph panel will always use 2/3 of the screen.
  
- Fractions like (1-a)/(1+b) are now shown with the 
  correct layout in the GUI.

- Speed up due to reduced Java/R communication.
  (More results are now cached in a Hashtable.)
  
 48 files changed, 559 insertions(+), 279 deletions(-)
  

Version 0.6-5 (26-May-2011, Rev. 825)
=====================================

- New dependency: CommonJavaJars
  This package contains now all the third party libraries.

- New example graphs:
  - Two versions of improved fallback procedures

- Improved placeNodes dialog.

- JavaGD plot is shown in CI dialog.

- Fixed bug with directory separators on Windows.

- Initialize the Java VM only if it is not initialized already.

 46 files changed, 157 insertions(+), 48 deletions(-)


Version 0.6-4 (11-May-2011, Rev. 782)
=====================================

- Fixed bug with saving and loading on Windows.
