@@ -18,9 +18,11 @@ export(BretzEtAl2011)
 export(truncatedHolm)
 export(fixedSequence)
 export(generalSuccessive, simpleSuccessiveI, simpleSuccessiveII)
-export(HommelEtAl2007)
+export(HommelEtAl2007, HommelEtAl2007Simple)
 export(HungEtWang2010)
 export(MaurerEtAl1995)
+export(BauerEtAl2001)
+export(BretzEtAl2009a, BretzEtAl2009b, BretzEtAl2009c)
 export(parallelGatekeeping, improvedParallelGatekeeping)
 export(fallback, improvedFallbackI, improvedFallbackII)
 export(cycleGraph)
