@@ -1,7 +1,7 @@
 graphAnalysis <- function(graph, file="") {
 	result <- ""
 	if (require("graph")) { 
-		graph <- new("graphAM", adjMat=graph@m)
+		graph <- new("graphAM", adjMat=graph@m, edgemode="directed")
 		accessible <- acc(graph, nodes(graph))
 		for (i in names(accessible)) {
 			missingNodes <- c()
